--- a/app/src/main/res/layout/dialog_loaisach_edit.xml
+++ b/app/src/main/res/layout/dialog_loaisach_edit.xml
@@ -11,7 +11,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Thêm Loại Sách"
+            android:text="SỬA LOẠI SÁCH"
             android:textSize="40dp"
             android:gravity="center"
             />
@@ -20,12 +20,10 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
             <EditText
-                android:background="@drawable/custome_boder_add"
                 android:layout_width="match_parent"
-                android:layout_height="30dp"
-                android:hint="   Loại Sách"
-
-                android:id="@+id/edt_dialog_loaisach_add_name"
+                android:layout_height="wrap_content"
+                android:hint="Tên loại sách"
+                android:id="@+id/edt_dialog_loaisach_edit_name"
                 />
         </LinearLayout>
 
@@ -38,15 +36,15 @@
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Add"
-                android:id="@+id/btn_dialog_loaisach_add_add"
+                android:text="Update"
+                android:id="@+id/btn_dialog_loaisach_edit_add"
                 />
-
             <Button
-                android:id="@+id/btn_dialog_loaisach_add_cancel"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="Cancel" />
+                android:layout_height="wrap_content"
+                android:text="Cancel"
+                android:id="@+id/btn_dialog_loaisach_edit_cancel"
+                />
         </LinearLayout>
     </LinearLayout>
 
