--- a/app/src/main/res/layout/fragment_top10_sach_muon_nhieu_nhat.xml
+++ b/app/src/main/res/layout/fragment_top10_sach_muon_nhieu_nhat.xml
@@ -1,15 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.Top10.Top10SachMuonNhieuNhatFragment">
+    android:orientation="vertical"
+    tools:context=".fragment.Top10SachMuonNhieuNhatFragment">
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/tv_top10"
         android:text="TOP 10"
         android:textSize="30dp"
         android:gravity="center"/>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyTop10"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="30dp"
+        />
 
-</FrameLayout>
+
+</LinearLayout>
