--- a/app/src/main/res/layout/fragment_doanh_thu.xml
+++ b/app/src/main/res/layout/fragment_doanh_thu.xml
@@ -1,16 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.Doanh_Thu.DoanhThuFragment">
+    tools:context=".fragment.DoanhThuFragment">
 
+    <Button
+        android:id="@+id/dt_btntungay"
+        android:text="TỪ NGÀY"
+        android:layout_marginLeft="10dp"
+        android:layout_width="120dp"
+        android:layout_height="50dp"/>
     <TextView
+        android:id="@+id/dt_tungay"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="DOANH THU"
-        android:textSize="30dp"
-        android:gravity="center"/>
+        android:layout_marginLeft="150dp"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        android:layout_marginTop="10dp"
+        android:layout_height="50dp"/>
+    <Button
+        android:id="@+id/dt_btndenngay"
+        android:layout_below="@+id/dt_btntungay"
+        android:text="ĐẾN NGÀY"
+        android:layout_marginLeft="10dp"
+        android:layout_width="120dp"
+        android:layout_height="50dp"/>
+    <TextView
+        android:id="@+id/dt_denngay"
+        android:layout_below="@+id/dt_tungay"
+        android:layout_width="match_parent"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        android:layout_marginTop="2dp"
+        android:layout_marginLeft="150dp"
+        android:layout_height="50dp"/>
+    <Button
+        android:id="@+id/dt_btndoanhthu"
+        android:layout_below="@+id/dt_btndenngay"
+        android:text="Tổng doanh thu"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="100dp"
+        android:layout_width="200dp"
+        android:layout_height="50dp"/>
+    <TextView
+        android:id="@+id/a1"
+        android:layout_below="@+id/dt_btndoanhthu"
+        android:text="Tổng Doanh Thu Là:"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        android:layout_marginLeft="5dp"
+        android:layout_width="match_parent"
+        android:layout_marginTop="10dp"
+        android:layout_height="50dp"/>
+    <TextView
+        android:id="@+id/dt_doanhthu"
+        android:layout_below="@+id/dt_btndoanhthu"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        android:layout_marginLeft="200dp"
+        android:layout_width="match_parent"
+        android:layout_marginTop="10dp"
+        android:layout_height="50dp"/>
 
 
-</FrameLayout>
+</RelativeLayout>
