--- a/app/src/main/res/layout/fragment_quan_ly_loai_sach.xml
+++ b/app/src/main/res/layout/fragment_quan_ly_loai_sach.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:layout_margin="30dp"
-    tools:context=".fragment.QuanLyLoaiSach.QuanLyLoaiSachFragment">
+    tools:context=".fragment.QuanLyLoaiSachFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recy_loaisach"
