--- a/app/src/main/res/layout/fragment_quan_ly_sach.xml
+++ b/app/src/main/res/layout/fragment_quan_ly_sach.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".fragment.QuanLySach.QuanLySachFragment">
+    tools:context=".fragment.QuanLySachFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recy_sach"
