--- a/app/src/main/res/layout/dialog_phieumuon_add.xml
+++ b/app/src/main/res/layout/dialog_phieumuon_add.xml
@@ -62,6 +62,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:paddingLeft="20dp"
+                android:paddingTop="10dp"
+                android:text="hehe"
                 android:layout_marginTop="10dp"
                 android:id="@+id/tv_dialog_phieumuon_add_giathue"
                 />
