--- a/app/src/main/res/layout/dialog_phieumuon_edit.xml
+++ b/app/src/main/res/layout/dialog_phieumuon_edit.xml
@@ -61,6 +61,7 @@
                 android:background="@drawable/custome_boder_add"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
+                android:paddingTop="10dp"
                 android:paddingLeft="20dp"
                 android:layout_marginTop="10dp"
                 android:id="@+id/tv_dialog_phieumuon_edit_giathue"
